fixed home text & image alignment

--- a/public/css/sites/home.css
+++ b/public/css/sites/home.css
@@ -47,6 +47,10 @@
         height: auto;
     }
 
+    .self-portrait.center-items {
+        margin: 30px;
+    }
+
     .home-container {
         height: 100vh;
         display: grid;
